# bonni

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  README.md  pyproject.toml
.claude/skills/implement/: SKILL.md
.github/workflows/: cicd.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
scripts/: bragg_reflector.py  broadband_taper.py  example.py  grating_coupler.py  photonic_crystal.py
src/bonni/: __init__.py  bo.py  bonni.py  constants.py  function.py  ipopt.py  misc.py  synthetic.py
src/bonni/acquisition/: ei.py  optim.py
src/bonni/model/: embedding.py  ensemble.py  mlp.py  optim.py  training.py  utils.py
src/bonni/visualization/: surrogate.py  training.py
tests/: test_bonni.py  test_ipopt.py
