[project]
name = "bonni"
version = "0.1.0"
description = "BONNI: Bayesian Optimization via Neural Network surrogates and Interior Point Optimization"
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "jax",
    "matplotlib",
    "flax",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "scipy>=1.15.2",
    "nlopt>=2.9.1",
    "pipipopt>=1.6.1",
    "optax>=0.2.6",
    "numpy<2.4",
]

[project.optional-dependencies]
examples = [
    "tidy3d>=2.9.1",
]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pymdown-extensions>=10.12",
    "pydoclint>=0.6.6",
    "sphinx>=8.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=3.2.0",
    "myst_nb>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
