[project]
name = "bonni"
version = "0.1.0"
description = "BONNI: Bayesian Optimization via Neural Network surrogates and Interior Point Optimization"
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "jax",
    "matplotlib",
    "flax",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "scipy>=1.15.2",
    "nlopt>=2.9.1",
    "pipipopt>=1.6.1",
    "optax>=0.2.6",
    "numpy<2.4",
]

[project.optional-dependencies]
examples = [
    "tidy3d>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
