[project]
name = "bonni"
version = "1.1.2"
description = "BONNI: Bayesian Optimization via Neural Network surrogates and Interior Point Optimization"
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "jax",
    "matplotlib",
    "flax",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "scipy>=1.15.2",
    "nlopt>=2.9.1",
    "pipipopt>=1.6.1",
    "optax>=0.2.6",
    "numpy<2.4",
]

[project.optional-dependencies]
examples = [
    "tidy3d>=2.9.1",
    "tmm>=0.2.0",
]
dev = [
    "tidy3d>=2.9.1",
    "tmm>=0.2.0",
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pymdown-extensions>=10.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
    "tox-uv>=1.16.1",
    "pydoclint>=0.6.6",
    "sphinx<9.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=3.2.0",
    "myst_nb>=1.3.0",
    "sphinx-copybutton>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
